monitoring/prometheus-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: monitoring
spec:
  hosts:
    - "prometheus.local"
  gateways:
    - prometheus-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: prometheus-server.monitoring.svc.cluster.local
            port:
              number: 9090
